--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,19 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Find GStreamer
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(GST REQUIRED gstreamer-1.0 gstreamer-app-1.0)
+pkg_check_modules(GST REQUIRED gstreamer-1.0 gstreamer-app-1.0 gstreamer-video-1.0
+)
 
 include_directories(
     ${GST_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
 link_directories(
     ${GST_LIBRARY_DIRS}
 )
+add_definitions(${GST_CFLAGS_OTHER})
+
 
 # Add examples in src/
 add_executable(appsink_example
@@ -48,4 +52,13 @@ target_compile_options(appsrc_to_mp4
 target_link_libraries(appsrc_to_mp4
     PRIVATE
         ${GST_LIBRARIES}
+)
+
+# ---------- PoC buffering demo ----------
+add_executable(poc_buffering
+    src/PoC_buffering/main.cpp
+    src/PoC_buffering/prebuffer_recorder.cpp
+)
+target_link_libraries(poc_buffering
+    ${GST_LIBRARIES}
 )
